--- a/paginas/templates/paginas/sobre.html
+++ b/paginas/templates/paginas/sobre.html
@@ -13,7 +13,29 @@
 </head>
 
 <body>
-    <h3>Pagina Sobre do Site</h3>
+    <h1>SOBRE</h1>
+    <h2>DESCRIÇÃO DO PROJETO</h2>
+    <p>O projeto idealizado pelos estudantes Gabrielen Silva de Abreu e Rafael Malaquias Azevedo, tem a premissa de
+        proporcionar um simples contador de calorias para uso cotidiano,
+        proporcionando uma contagem precisa do quanto de calorias que a pessoa ingeriu naquele dia, com personalização
+        de usuário, com contagem de peso, e cálculo de
+        gasto de calorias basal, para que com o contador, você consiga ficar sempre em déficit calórico e assim, ter
+        queima de gordura, que leva ao emagrecimento, dessa forma
+        sendo um companheiro para a pessoa que está com objetivos quanto ao seu corpo. Dessa forma, ajudando diversas
+        pessoas e fazendo com que nós, alunos, consigamos nossa aprovação
+        na disciplina de programação WEB
+    </p>
+
+    <h2>DIAGRAMA DE CASOS DE USO DO PROJETO</h2>
+    <div>
+        <img src="{% static 'imagens/DCU.jpeg'%}">
+    </div>
+
+    <h2>DIAGRAMA DE CLASSES DO PROJETO</h2>
+    <div id="DC">
+        <img src="{% static 'imagens/DC.jpeg'%}">
+    </div>
+        
 </body>
 
 </html>
