--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -1,6 +1,7 @@
-{% load static %} 
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,16 @@
     <title> Página Inicial </title>
 
     <link rel="shortcut icon" href="{% static 'imagens/favicon.png' %}" type="image/x-icon">
-    
+
     <link rel="stylesheet" href="{% static 'estilo.css' %}">
 </head>
+
 <body>
-    <h3>Pagina Inicial do blog</h3>
+    <h1>PÁGINA INICIAL DO BLOG</h1>
+    <a href="http://127.0.0.1:8000/sobre/" target="_blank">
+        <h3> • SOBRE </h3>
+    </a>
+    <h3> </h3>
 </body>
+
 </html>
