--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -7,18 +7,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Página Inicial </title>
-
     <link rel="shortcut icon" href="{% static 'imagens/favicon.png' %}" type="image/x-icon">
-
-    <link rel="stylesheet" href="{% static 'estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/estilo.css' %}"> -->
+    <script src="{% static 'javascript/jquery-3.6.0.js' %}"></script>
+    <script src="{% static 'javascript/bootstrap.js' %}"></script>
 </head>
 
 <body>
+<header class="p-3 bg-dark text-white">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap" />
+                </svg>
+            </a>
+
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="#" class="nav-link px-2 text-secondary">Início</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="http://127.0.0.1:8000/sobre/" target="_blank" class="nav-link px-2 text-white"> Sobre </a></li>
+            </ul>
+
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+            </form>
+
+            <div class="text-end">
+                <button type="button" class="btn btn-outline-light me-2"> Login </button>
+                <button type="button" class="btn btn-warning"> Entrar </button>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div class='container m-3'>
+    {% block conteudo %}
     <h1>PÁGINA INICIAL DO BLOG</h1>
-    <a href="http://127.0.0.1:8000/sobre/" target="_blank">
-        <h3> • SOBRE </h3>
-    </a>
-    <h3> </h3>
+    {% endblock %}
+</div>
+
+
 </body>
 
 </html>
