Django Crispy Forms, Login e Logout e LoginRequiredMixin

--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +16,7 @@
 </head>
 
 <body>
+   
 <header class="p-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -25,28 +27,30 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-secondary">Início</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="http://127.0.0.1:8000/inicio/" class="nav-link px-2 text-white">Início</a></li>
+                <li><a href="http://127.0.0.1:8000/listar/nutriente" class="nav-link px-2 text-white">Listar Nutrientes</a></li>
+                <li><a href="http://127.0.0.1:8000/listar/categoria" class="nav-link px-2 text-white">Listar Categorias</a></li>
                 <li><a href="http://127.0.0.1:8000/sobre/" target="_blank" class="nav-link px-2 text-white"> Sobre </a></li>
             </ul>
-
+            
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                 <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
             </form>
 
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2"> Login </button>
-                <button type="button" class="btn btn-warning"> Entrar </button>
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+                <a class="nav-link" href="{% url 'alterar-senha' %}">Mudar senha</a>
             </div>
         </div>
     </div>
+
+    
 </header>
 
 <div class='container m-3'>
     {% block conteudo %}
-    <h1>PÁGINA INICIAL DO BLOG</h1>
+   
     {% endblock %}
 </div>
 
