--- a/paginas/templates/paginas/sobre.html
+++ b/paginas/templates/paginas/sobre.html
@@ -1,6 +1,7 @@
 {% extends 'paginas/index.html' %}
 {% load static %}
 {% block conteudo %}
+    <title> Sobre </title>
     <h1>SOBRE</h1>
     <h2>DESCRIÇÃO DO PROJETO</h2>
     <p>O projeto idealizado pelos estudantes Gabrielen Silva de Abreu e Rafael Malaquias Azevedo, tem a premissa de
