--- a/cadastros/templates/cadastros/formulario.html
+++ b/cadastros/templates/cadastros/formulario.html
@@ -1,14 +1,52 @@
 {% extends 'paginas/index.html' %}
+
 {% load static %}
+
 {% load crispy_forms_tags %}
+
 {% block conteudo %}
-<form method="post">
+<h3>Cadastrar</h3>
+
+<p class = "lead">
+    Preencha todos os campos obrigatórios.
+</p>
+
+<hr>
+
+<form action="" method="post">
     {% csrf_token %}
 
     {{ form|crispy }}
 
     <button type="submit" class="btn btn-success">
+
         Cadastrar
+        
     </button>
 </form>
+{% endblock %}
+{% block scripts %}
+<script src="{% static 'javascript/jquery.mask.min.js' %}"></script>
+
+<script>
+    $(document).ready(function () {
+
+    $('#id_data_nasc').mask('00/00/0000');
+    
+    $('#id_horario').mask('00:00');
+
+    $('#id_peso').mask('00Z.00',{ translation: { 'Z': { pattern: /[0-9]/, optional: true } } });
+
+    $('#id_altura').mask('0.00');
+    var SPMaskBehavior = function (val) {
+        return val.replace(/\D/g, '').length === 11 ? '(00) 00000-0000' : '(00) 0000-00009';
+    },
+        spOptions = {
+            onKeyPress: function (val, e, field, options) {
+                field.mask(SPMaskBehavior.apply({}, arguments), options);
+            }
+        };
+    $('#id_telefone').mask(SPMaskBehavior, spOptions);
+    });
+</script>
 {% endblock %}
