--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,51 +9,98 @@
     <title> Página Inicial </title>
     <link rel="shortcut icon" href="{% static 'imagens/favicon.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <!-- <link rel="stylesheet" href="{% static 'css/estilo.css' %}"> -->
-    <script src="{% static 'javascript/jquery-3.6.0.js' %}"></script>
-    <script src="{% static 'javascript/bootstrap.js' %}"></script>
+
 </head>
 
 <body>
-   
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap" />
-                </svg>
-            </a>
+    <header>
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Calculadora de Calorias</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="http://127.0.0.1:8000/inicio/" class="nav-link px-2 text-white">Início</a></li>
-                <li><a href="http://127.0.0.1:8000/listar/nutriente" class="nav-link px-2 text-white">Listar Nutrientes</a></li>
-                <li><a href="http://127.0.0.1:8000/listar/categoria" class="nav-link px-2 text-white">Listar Categorias</a></li>
-                <li><a href="http://127.0.0.1:8000/sobre/" target="_blank" class="nav-link px-2 text-white"> Sobre </a></li>
-            </ul>
-            
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-            </form>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'inicio' %}">Início</a>
+                        </li>
 
-            <div class="text-end">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-link" href="{% url 'logout' %}">Sair</a>
-                <a class="nav-link" href="{% url 'alterar-senha' %}">Mudar senha</a>
+                        {% if request.user.is_authenticated %}
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Listas
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="nav-link px-2 text-black" href="http://127.0.0.1:8000/listar/nutriente">Listar Nutriente</a></li>
+                                <li><a class="nav-link px-2 text-black" href="http://127.0.0.1:8000/listar/categoria">Listar categoria</a></li>
+                                <li><a class="nav-link px-2 text-black" href="http://127.0.0.1:8000/listar/sac/">Listar SAC</a></li>
+                                <li><a class="nav-link px-2 text-black" href="http://127.0.0.1:8000/listar/perfil/">Listar Perfil</a></li>
+                                <li><a class="nav-link px-2 text-black" href="http://127.0.0.1:8000/listar/alimento/">Listar Alimento</a></li>
+                                <li><a class="nav-link px-2 text-black" href="http://127.0.0.1:8000/listar/refeicao/">Listar Refeição</a></li>
+                            </ul>
+                        </li>
+
+                        {% endif %}
+
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://127.0.0.1:8000/sobre/">Sobre</a>
+                        </li>
+
+                    </ul>
+
+
+                    {% if request.user.is_authenticated %}
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ request.user }}
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="nav-link" href="{% url 'atualizar' %}">Atualizar Perfil</a></li>
+                            <li><a class="nav-link" href="{% url 'alterar-senha' %}">Mudar senha</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="nav-link" href="{% url 'logout' %}">Sair</a></li>
+                        </ul>
+                    </div>
+                    {% else %}
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    <a class="nav-link" href="{% url 'registrar'%}">Registrar</a>
+                    {% endif %}
+
+                </div>
             </div>
-        </div>
+        </nav>
+    </header>
+
+    <div class='container m-3'>
+        <br>
+        <br>
+        
+        {% block conteudo %}
+
+        {% endblock %}
     </div>
 
-    
-</header>
 
-<div class='container m-3'>
-    {% block conteudo %}
-   
+
+    <script src="{% static 'javascript/popper.js' %}"></script>
+    <script src="{% static 'javascript/bootstrap.js' %}"></script>
+    <script src="{% static 'javascript/jquery-3.6.0.js' %}"></script>
+
+    {% block scripts %}
+
     {% endblock %}
-</div>
-
-
 </body>
+
+
 
 </html>
