--- a/usuarios/templates/usuarios/trocar_senha.html
+++ b/usuarios/templates/usuarios/trocar_senha.html
@@ -11,27 +11,21 @@
 
     <div class="row mt-5">
         <div class="col-lg">
-            <h3>Login</h3>
+            <h3>Mudança de Senha</h3>
         </div>
     </div>
 
     <div class="row">
         <div class="col-lg-5">
-        {% if request.user.is_authenticated %}
-            <h4 class="mt-4 text-danger">Você não pode fazer isso!</h4>
-                Redirecionando para a página inicial em 5 segundos...
-            <meta http-equiv="Refresh" content="5; url={% url 'index' %}" />
-        {% else %}
             <form method="post">
                 <!-- Todo formulário tem que ter essa validação -->
                 {% csrf_token %}
                 <!-- Gera o formulário -->
                 {{ form|crispy }}
                 <button type="submit" class="btn-success">
-                   Entrar
+                    Trocar senha
                 </button>
             </form>
-        {% endif %}
 
         </div>
     </div>
