--- a/paginas/templates/paginas/sobre.html
+++ b/paginas/templates/paginas/sobre.html
@@ -17,11 +17,11 @@
 
     <h2>DIAGRAMA DE CASOS DE USO DO PROJETO</h2>
     <div>
-        <img class ='.img-fluid' style='width:1050px'  src="{% static 'imagens/DCU.jpeg'%}">
+        <img class ='img-fluid' style='width:1050px'  src="{% static 'imagens/DCU.jpeg'%}">
     </div>
 
     <h2>DIAGRAMA DE CLASSES DO PROJETO</h2>
     <div id="DC">
-        <img class ='.img-fluid'style='width:1050px' src="{% static 'imagens/DC.jpeg'%}">
+        <img class ='img-fluid'style='width:1050px' src="{% static 'imagens/DC.jpeg'%}">
     </div>
  {% endblock %}    
